--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-VLN9A576;Database=E-HandelDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "LocalConnection": "Server=LAPTOP-VLN9A576;Database=E-HandelDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
