--- a/.github/workflows/main_mattiasehandelapi.yml
+++ b/.github/workflows/main_mattiasehandelapi.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - MattiasEhandelAPI
 
 on:
@@ -26,13 +23,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o myapp  # Changed line
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: myapp
 
   deploy:
     runs-on: windows-latest
@@ -53,5 +50,5 @@ jobs:
         with:
           app-name: 'MattiasEhandelAPI'
           slot-name: 'Production'
-          package: .
+          package: myapp  # Changed line
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BB4DF0A02D8E4FC1A9F2736BC4804C80 }}
